[gd_scene load_steps=12 format=2]

[ext_resource path="res://GUI/art/title.png" type="Texture" id=1]
[ext_resource path="res://GUI/Menu.gd" type="Script" id=2]
[ext_resource path="res://map/Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sound/tracks/Fallen.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]

size = 72
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 18
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Title" type="TextureRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
stretch_mode = 0
script = ExtResource( 2 )
level = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 300
custom_constants/margin_top = 200
custom_constants/margin_left = 280
custom_constants/margin_bottom = 40
_sections_unfolded = [ "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 280.0
margin_top = 200.0
margin_right = 660.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_right = 309.0
margin_bottom = 87.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Jogar"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 107.0
margin_right = 380.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 82.0
margin_right = 237.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Recorde: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="PointLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 241.0
margin_right = 298.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.133333, 0.733333, 0.133333, 1 )
text = "000"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="InstructionLabel" type="Label" parent="MarginContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 164.0
margin_right = 380.0
margin_bottom = 233.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Use as setas para se mover
Aperte 'Z' para atacar
Aperte Espa√ßo para usar o dash"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_top = 253.0
margin_right = 247.0
margin_bottom = 314.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Sair"
flat = false
align = 1
_sections_unfolded = [ "Grow Direction", "Size Flags", "custom_fonts" ]

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 334.0
margin_right = 380.0
margin_bottom = 397.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Criado na #1 UFSC GAME JAM por
  Anderson H. Notholt (andersonhn)
  Gabriel B. Sant'Anna (Zkirmisher)"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="BackTrack" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 5 )
volume_db = -25.0
pitch_scale = 1.0
autoplay = true
mix_target = 1
bus = "Master"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]

[connection signal="finished" from="BackTrack" to="." method="_on_BackTrack_finished"]


